# warsztat

./: README.md
client/: .npmrc  build.sh  doc.txt  package.json  run.sh  tsconfig.json
client/src/: Provider.ts  index.html  index.tsx
client/src/App/: App.tsx
client/src/App/TabChat/: TabChat.tsx
client/src/App/TabTiny/: TabTiny.tsx
client/src/AppState/: AppState.ts
iteratory/: Cargo.toml
iteratory/src/: ex0_example.rs  ex1_filtering.rs  ex2_slicing.rs  ex3_mapping.rs  ex4_finding.rs  ex5_aggregating.rs  ex6_mixed.rs  ex7_joining.rs  lib.rs
server/: Cargo.toml  run.sh
server/src/: HtmlNode.rs  app.rs  crawler.rs  iterator.txt  main.rs
server/src/blog/: blog.rs  warsztat2
server/src/blog/posts/: handlers.rs  mod.rs  model.rs  rendering.rs  urls.rs
server/src/crawler/: getCdaList.rs  mod.rs
server/src/crawlerApi/: getCdaList.rs  isPremium.rs  mod.rs
server/src/crawlerRouting/: crawlerRouting.rs  mod.rs
server/src/defaultRouting/: defaultRouting.rs  mod.rs
server/src/utils/: HtmlNode.rs  getFromUrl.rs  injectState.rs  mod.rs  render.rs
