[package]
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>"]
edition = "2018"
name = "server_4"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
maud = "0.22.0"
reqwest = "0.10.6"
select = "0.5.0"
serde = {version = "1.0.114", features = ["derive", "rc"]}
serde_json = "1.0.55"
tokio = {version = "0.2", features = ["macros"]}
url = "2.1.1"
warp = "0.2"
